added background image, added a H2 with a bigger text then a paragraph with smaller text in it, then i added to smaller images and a button, an explore button

--- a/index.html
+++ b/index.html
@@ -49,5 +49,26 @@
         </div>
       </div>
     </header>
+    <section class="section-1-container">
+      <div class="section-container">
+        <h2 class="big-text">Why Choose Us</h2>
+        <p class="small-text">
+          Tion and dislike men who are so beguiled and demoralized by desire by
+          the charms of pleasure of the moment, so blinded by desire, that they
+          cannot foresee. <br /><br />
+          Ddislike men who are so beguiled and demoralized by the charms of
+          pleasure of the moment, so blinded by desire, that.
+        </p>
+        <button class="explorebtn">EXPLORE PLACES</button>
+      </div>
+      <div class="pic-container">
+        <img class="pic-house" src="images/Cabin.png" alt="cabin-near-water" />
+        <img
+          class="pic-mountain-small"
+          src="images/Mountain small.png"
+          alt="mountains"
+        />
+      </div>
+    </section>
   </body>
 </html>
