added icons in html, added a image of the bow shape, and added som paragraphs

--- a/index.html
+++ b/index.html
@@ -70,5 +70,18 @@
         />
       </div>
     </section>
+    <section class="section-2-container">
+      <img class="img-bow" src="images/Shape 1.png" alt="bow-line" />
+      <div class="section-2-content">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-regular fa-circle-check"></i>
+        <i class="fa-regular fa-thumbs-up"></i>
+      </div>
+      <div class="small-text-2">
+        <p>Search Places</p>
+        <p>Select Places</p>
+        <p>Book & Enjoy</p>
+      </div>
+    </section>
   </body>
 </html>
