added the html to section 3, split the two diffrent pictures int to different sections so its easier to look at and easier to read the code, so added the left content section

--- a/index.html
+++ b/index.html
@@ -83,5 +83,19 @@
         <p>Book & Enjoy</p>
       </div>
     </section>
+    <section class="section-3-container">
+      <div class="content-left">
+        <div class="box-text">
+          <h5 class="spain">Spain</h5>
+          <h3 class="madrid">GRAND SPAIN MADRID</h3>
+          <p class="info-tex-spain">
+            But I must explain to you how all this mistaken idea of account to
+            denouncing pleasure and praising pain was account born and I account
+            will give you a complete account of the system
+          </p>
+          <button class="book-now-btn">BOOK NOW</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
