--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="box-text">
           <h5 class="spain">Spain</h5>
           <h3 class="madrid">GRAND SPAIN MADRID</h3>
-          <p class="info-tex-spain">
+          <p class="info-text-spain">
             But I must explain to you how all this mistaken idea of account to
             denouncing pleasure and praising pain was account born and I account
             will give you a complete account of the system
