added html for section 4 the right side content for the section i choose to split in to two, added H3 H5 and paragraph and also a button, made the box for the text here also see through, added the hover on the book now button, added a background image

--- a/index.html
+++ b/index.html
@@ -97,5 +97,19 @@
         </div>
       </div>
     </section>
+    <section class="section-4-container">
+      <div class="content-4">
+        <div class="box-text-right">
+          <h5 class="spain-1">Spain</h5>
+          <h3 class="madrid-1">GRAND SPAIN MADRID</h3>
+          <p class="info-text-spain-1">
+            But I must explain to you how all this mistaken idea of account to
+            denouncing pleasure and praising pain was account born and I account
+            will give you a complete account of the system
+          </p>
+          <button class="book-now-1-btn">BOOK NOW</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
