--- a/index.html
+++ b/index.html
@@ -129,5 +129,20 @@
         </div>
       </div>
     </section>
+    <section class="section-6-container">
+      <div class="content-container-6">
+        <div class="text-info-6">
+          <h2 class="bhromaon">BHROMAON</h2>
+          <p class="safe-travel">Safe Travel Anywhere</p>
+        </div>
+        <div class="social-media">
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-pinterest"></i>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
